UserInfo/src/main/fabric8/userinfo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userinfo
  namespace: application-deployment
  labels:
    app: userinfo
spec:
  replicas: 1
  template:
    spec:
      containers:
      - env:
        - name: MYSQL_DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: database-user
              name: mysql
        - name: MYSQL_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: mysql
        - name: DATABASE_NAME
          valueFrom:
            secretKeyRef:
              key: database-name
              name: mysql
