UserInfo/src/main/fabric8/userinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: userinfo
  namespace: application-deployment
  labels:
    app: userinfo
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: userinfo
