UserInfo/src/main/fabric8/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: userinfo
  namespace: application-deployment
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: userinfo
